--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "angular-material-timepicker",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Prototype of a Material Design Timepicker Component for Angular 2.",
+  "keywords": ["angular", "angular2", "material", "timepicker"],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GrillPhil/angular-material-timepicker.git"
+  },
+  "author": "Philipp Bauknecht <philipp@outlook.de>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/GrillPhil/angular-material-timepicker/issues"
+  },
+  "homepage": "https://github.com/GrillPhil/angular-material-timepicker#readme",
+  "main": "./index.ts",
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
@@ -11,7 +23,6 @@
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
   },
-  "private": true,
   "dependencies": {
     "@angular/common": "^2.3.1",
     "@angular/compiler": "^2.3.1",
@@ -21,6 +32,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@angular/material": "^2.0.0-beta.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
