--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "angular-material-timepicker",
   "version": "1.0.0",
   "description": "Prototype of a Material Design Timepicker Component for Angular 2.",
-  "keywords": ["angular", "angular2", "material", "timepicker"],
+  "keywords": [
+    "angular",
+    "angular2",
+    "material",
+    "timepicker"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GrillPhil/angular-material-timepicker.git"
@@ -29,14 +34,14 @@
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
+    "@angular/material": "^2.0.0-beta.1",
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
-    "@angular/material": "^2.0.0-beta.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
